...
    <string formatted="false" name="stage">Stage</string>
    <string formatted="false" name="play">Play</string>
    <string formatted="false" name="settings">Settings</string>
    <string formatted="false" name="redo">Redo</string>
    <string formatted="false" name="undo">Undo</string>

    <string formatted="false" name="new_option">new…</string>
    <string formatted="false" name="edit_option">edit…</string>

    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="save">Save</string>
    <string formatted="false" name="help">Help</string>

    <string formatted="false" name="discard">Discard</string>

    <string formatted="false" name="next">Next</string>

    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>

    <string formatted="false" name= "assistant">Assistant</string>
...
    <string formatted="false" name="note_picker_title">Note Picker</string>
    <!--  -->

    <!-- Rating Dialog -->
    <string formatted="false" name="rating_dialog_title">Rate App</string>
    <string formatted="false" name="rating_google_play_dialog_text">If you enjoy this app, please rate us on the App store.</string>
    <string formatted="false" name="rating_dialog_rate_now">Now</string>
    <string formatted="false" name="rating_dialog_rate_later">Later</string>
    <string formatted="false" name="rating_dialog_rate_never">Never</string>
    <!--  -->

    <!-- Terms of Use Dialog -->
    <string formatted="false" name="dialog_terms_of_use_title">Terms of Use and Service</string>
...
    <string formatted="false" name="brick_context_dialog_move_brick">Move brick</string>
    <string formatted="false" name="brick_context_dialog_move_script">Move script</string>
    <string formatted="false" name="brick_context_dialog_move_definition">Move this definition</string>
    <string formatted="false" name="brick_context_dialog_delete_brick">Delete brick</string>
    <string formatted="false" name="brick_context_dialog_copy_brick">Copy brick</string>
    <string formatted="false" name="brick_context_dialog_copy_script">Copy script</string>
    <string formatted="false" name="brick_context_dialog_formula_edit_brick">Edit formula</string>
    <string formatted="false" name="brick_context_dialog_delete_script">Delete script</string>
    <string formatted="false" name="brick_context_dialog_delete_definition">Delete this definition</string>
    <string formatted="false" name="brick_context_dialog_comment_in">Enable brick</string>
    <string formatted="false" name="brick_context_dialog_comment_out">Disable brick</string>
    <string formatted="false" name="brick_context_dialog_highlight_brick_parts">Highlight brick parts</string>
    <string formatted="false" name="brick_context_dialog_comment_in_script">Enable script</string>
...
    <string formatted="false" name="brick_user_defined_list_empty">Tap \"+\" to add your own new bricks.</string>

    <string formatted="false" name="brick_report">Report</string>
    <!--  -->

    <!-- Motion bricks -->
    <string formatted="false" name="brick_place_at">"Place at"</string>
    <string formatted="false" name="brick_option_place_visually">Place visually</string>
    <string formatted="false" name="x_label">"x:"</string>
    <string formatted="false" name="y_label">"y:"</string>
    <string formatted="false" name="brick_set_x">"Set x to"</string>
    <string formatted="false" name="brick_set_y">"Set y to"</string>
    <string formatted="false" name="brick_change_x_by">"Change x by"</string>
...

    <string formatted="false" name="brick_loop_end">End of loop</string>
    <string formatted="false" name="brick_if_begin">If</string>
    <string formatted="false" name="brick_if_begin_second_part">is true then</string>
    <string formatted="false" name="brick_if_else">Else</string>
    <string formatted="false" name="brick_if_end">End if</string>
    <string formatted="false" name="brick_set_variable">Set variable</string>
    <string formatted="false" name="brick_change_variable">Change variable</string>
    <string formatted="false" name="brick_write_variable_on_device">Write variable on device</string>
    <string formatted="false" name="brick_read_variable_from_device">Read variable from device</string>
    <string formatted="false" name="brick_write_variable_to_file_top">Write variable</string>
    <string formatted="false" name="brick_write_variable_to_file_bottom">to file</string>
    <string formatted="false" name="brick_write_variable_to_file_default_value">variable.txt</string>
...
    <string formatted="false" name="guiro">guiro</string>
    <string formatted="false" name="vibraslap">vibraslap</string>
    <string formatted="false" name="open_cuica">open cuica</string>
    <!--  -->

    <!-- Default Values -->
    <string formatted="false" name="default_project_name">My project</string>
    <string formatted="false" name="default_variable_name">Variable</string>
    <string formatted="false" name="default_scene_name">Scene</string>
    <string formatted="false" name="default_script_group_name">Script group</string>
    <string formatted="false" name="default_broadcast_message_name">Message</string>
    <string formatted="false" name="default_list_name">List</string>
    <string formatted="false" name="default_project_background_name">Background</string>
...
    <string formatted="false" name="error_rename_scene">Something went wrong while renaming the scene.</string>
    <string formatted="false" name="error_load_project">Something went wrong while loading the project.</string>
    <string formatted="false" name="error_screenshot_failed">Something went wrong while saving the preview image.</string>
    <string formatted="false" name="error_internet_connection">An unknown error occurred. Check your Internet connection.</string>
    <string formatted="false" name="error_project_compatibility">The project is not compatible with this version of the app.</string>
    <string formatted="false" name="error_outdated_version">This app version is outdated. Update now?</string>
    <string formatted="false" name="error_upload_project_with_default_name">You cannot upload a project with the name \"%s\".
        Please rename the project.</string>
    <string formatted="false" name="error_upload_default_project">You cannot upload an unmodified example project. Please
        change something and try again.</string>
    <string formatted="false" name="error_adding_brick">Something went wrong while adding this brick.</string>
    <string formatted="false" name="error_copying_brick">Something went wrong while copying this brick.</string>
    <string formatted="false" name="error_rename_incompatible_project">Renaming an incompatible project is not possible.</string>
...
