...
            style="@style/BrickText.SingleLine"
            android:text="@string/x_label"
            app:layout_newLine="true">
        </TextView>

        <TextView
            android:id="@+id/brick_place_at_edit_text_x"
            style="@style/BrickEditText">
        </TextView>

        <TextView
            style="@style/BrickText.SingleLine"
            android:text="@string/y_label">
        </TextView>

        <TextView
            android:id="@+id/brick_place_at_edit_text_y"
            style="@style/BrickEditText">
        </TextView>
    </com.myradev.lunarcode.ui.BrickLayout>

</LinearLayout>
