...

        <TextView
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_set_variable" />

        <Spinner
            android:id="@+id/set_variable_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="locale" />

        <TextView
            style="@style/BrickText.SingleLine"
...
